@@ -1,2 +1,2 @@
-4.0.5
+4.0.6
 
